--- a/src/app/Painel-Administrativo/produtos-administrativo/adicionar-produtos/produtos.component.css
+++ b/src/app/Painel-Administrativo/produtos-administrativo/adicionar-produtos/produtos.component.css
@@ -1,6 +1,10 @@
 .marginTopBottomContentContainerAdmin{
     background-color:white;
-}   
+}  
+
+.marginTopBottomContentContainerAdmin:hover {
+  background-color:grey;
+}
 
 .marginContentContainerAdmin{
     margin-left: 5%;
